--- a/API/package.json
+++ b/API/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^8.0.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "readline": "^1.3.0",
     "sqlite3": "^5.1.4"
   }
 }
