--- a/API/package.json
+++ b/API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^8.0.1",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
