--- a/API/package.json
+++ b/API/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "better-sqlite3": "^8.0.1",
     "body-parser": "^1.20.1",
+    "busboy": "^1.6.0",
+    "connect-busboy": "^1.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
