--- a/API/package.json
+++ b/API/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.1",
     "busboy": "^1.6.0",
     "connect-busboy": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
